<!DOCTYPE resources [<!ENTITY nbsp "&#160;"><!-- non-breaking space, U+00A0 -->
    ]>
<resources>
    <string name="action_sign_out">Sign out</string>
    <string name="add_service">Add Clinic Service</string>
    <string name="admin_role">Admin</string>
    <string name="employee_role">Clinic employee</string>
    <string name="form_address"> Address</string>
    <string name="form_insurance"> Insurance</string>
    <string name="form_payment"> Payment</string>
    <string name="form_phone_number"> Phone Number</string>
    <string name="invalid_name"> Please enter a valid name</string>
    <string name="invalid_non_positive">Please enter a positive number</string>
    <string name="invalid_larger_number">Please enter a number between 1 and 5</string>
    <string name="invalid_number">Please input a number</string>
    <string name="invalid_string"> Please enter something</string>
    <string name="list_delimiter">,&nbsp;</string>
    <string name="patient_role">Patient</string>
    <string name="profile">Profile</string>
    <string name="prompt_confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="add_services">Add services</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="closed">Closed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="service">Service</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="hours_mins">%1$d:%1$d</string>
    <string name="comments">Comments</string>
    <string name="rate_enter">Enter a number from 1-5</string>
    <string name="updated_rating">Updated rating</string>
    <string name ="review"> Leave a Review!</string>
</resources>
