<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="io.github.professor_forward.teampineapple.walkinclinic.commonui.ClinicHoursViewModel" />
        <variable name="vm" type="ClinicHoursViewModel" />
    </data>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".commonui.ClinicHoursFragment"
        android:stretchColumns="1"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:padding="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.sundayHours}"
                android:padding="4dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:padding="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.mondayHours}"
                android:padding="4dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:padding="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.tuesdayHours}"
                android:padding="4dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:padding="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.wednesdayHours}"
                android:padding="4dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:padding="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.thursdayHours}"
                android:padding="4dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:padding="4dp"
                />

            <TextView
                android:id="@+id/day6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.fridayHours}"
                android:padding="4dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:padding="4dp"
                />

            <TextView
                android:id="@+id/day7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.saturdayHours}"
                android:padding="4dp"
                />
        </TableRow>
    </TableLayout>
</layout>
