<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="io.github.professor_forward.teampineapple.walkinclinic.employee.EmployeeClinicWorkingHoursViewModel" />
        <import type="io.github.professor_forward.teampineapple.walkinclinic.repo.DayOfWeek" />
        <variable name="vm" type="EmployeeClinicWorkingHoursViewModel" />
    </data>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="300dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:stretchColumns="1"
        tools:context=".employee.EmployeeClinicWorkingHours"
        >
        <TableRow
            android:onClick="@{(view) -> vm.edit(view, DayOfWeek.SUNDAY)}"
            style="@style/ClickableWithRipple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/sunday"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@{vm.sunday}"
                />
        </TableRow>
        <TableRow
            android:onClick="@{(view) -> vm.edit(view, DayOfWeek.MONDAY)}"
            style="@style/ClickableWithRipple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/monday"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@{vm.monday}"
                />
        </TableRow>
        <TableRow
            android:onClick="@{(view) -> vm.edit(view, DayOfWeek.TUESDAY)}"
            style="@style/ClickableWithRipple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/tuesday"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@{vm.tuesday}"
                />
        </TableRow>
        <TableRow
            android:onClick="@{(view) -> vm.edit(view, DayOfWeek.WEDNESDAY)}"
            style="@style/ClickableWithRipple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/wednesday"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@{vm.wednesday}"
                />
        </TableRow>
        <TableRow
            android:onClick="@{(view) -> vm.edit(view, DayOfWeek.THURSDAY)}"
            style="@style/ClickableWithRipple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/thursday"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@{vm.thursday}"
                />
        </TableRow>
        <TableRow
            android:onClick="@{(view) -> vm.edit(view, DayOfWeek.FRIDAY)}"
            style="@style/ClickableWithRipple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/friday"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@{vm.friday}"
                />
        </TableRow>
        <TableRow
            android:onClick="@{(view) -> vm.edit(view, DayOfWeek.SATURDAY)}"
            style="@style/ClickableWithRipple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/saturday"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@{vm.saturday}"
                />
        </TableRow>
    </TableLayout>
</layout>
